Vendor import nvi-2.1.2-c80f493b038 a multikey mapping fix

PR:		bin/182463

Former-commit-id: b10db20ed6f2d2fbb195810b49994bbd089ceab2